# setup

./: .gitmodules  .zprofile
.config/aerospace/: aerospace.toml
.config/ghostty/: config  config-theme
.config/git/: config  ignore
.config/karabiner/: karabiner.json
.config/yazi/: theme.toml  yazi.toml
.config/zsh/: .gitignore  .zshrc  aliases.zsh  completions.zsh  core.zsh  exports.zsh  functions.zsh  prompt.zsh
Personal/dev/doc/: doxyfile  git_notes.md  mylang_ideas.md  opencode.md  template.tex
Personal/dev/doc/typing/: typing.input  typing_code_1.md  typing_little_fing.md  typing_practice_1.txt  typing_practice_2.md  typing_practice_2.txt  typing_rh_sym_1.md
Personal/dev/include/: catch  fast_io  libcx
Personal/dev/opt/libcx/: .clang-tidy  .clangd  AGENTS.md  CMakeLists.txt  Doxyfile  Doxyfile.bck  README.md  demo_control_flow.cc  opencode.json
Personal/dev/opt/libcx/include/libcx/: .clangd  _demo_ya_allocator.hh  concepts.hh  config.hh  libcx.hh  traits.hh
Personal/dev/opt/libcx/include/libcx/__concepts/: lifetime.hh  types.hh
Personal/dev/opt/libcx/include/libcx/__config/: macros.hh  platform.hh  types.hh
Personal/dev/opt/libcx/include/libcx/__container/: list.#  string.hh  string_view.hh
Personal/dev/opt/libcx/include/libcx/__deprecated/: memory.#
Personal/dev/opt/libcx/include/libcx/__traits/: lifetime.hh  logic.hh  qualifier.hh  relation.hh  types.hh
Personal/dev/opt/libcx/include/libcx/__utils/: declval.hh  defer.hh  enum_base.#  ownership.hh
Personal/dev/opt/libcx/include/libcx/__vendor/: vendor.hh
Personal/dev/opt/libcx/include/libcx/arr/: array#.#  array.hh  array_v1.hh  array_v2.hh  dynamic_array.hh  inline_array.hh  multi_array.hh  proto_main  proto_main.cc  static_array.hh  test_main.cc
Personal/dev/opt/libcx/include/libcx/audio/: portaudio.hh
Personal/dev/opt/libcx/include/libcx/concept/: lifetime.hh  multi.hh  relation.hh  types.hh
Personal/dev/opt/libcx/include/libcx/conf/: hal.hh  macro.hh  prelude.hh  simd.hh  type.hh
Personal/dev/opt/libcx/include/libcx/err/: error.hh  error_message.hh  macros.hh  result_pair.hh
Personal/dev/opt/libcx/include/libcx/io/: io.hh
Personal/dev/opt/libcx/include/libcx/mem/: __allocator.hh  __unused.hh  _allocator.hh  allocator.hh  common.hh  const.hh  heap.hh  memory.hh  multi.hh  order.hh  pointer.hh  proto_main.cc  shared_pointer.#  shared_pointer.hh  shared_pointer_mk2.#  shared_pointer_mk2.hh  shared_pointer_mk3.#  shared_pointer_mk3.hh
Personal/dev/opt/libcx/include/libcx/os/file/: file.hh  file_macro.hh  macro.hh  unused.hh
Personal/dev/opt/libcx/include/libcx/rnd/: xoroshiro128p.hh  xoroshiro_128pp.#
Personal/dev/opt/libcx/include/libcx/str/: macro.hh  macros.hh  static_string.hh  string.hh  string_pack.hh  string_reference.hh  zero_string.hh
Personal/dev/opt/libcx/include/libcx/traits/: lifetime.hh  logic.hh  multi.hh  qualifier.hh  relation.hh  types.hh  under.hh
Personal/dev/opt/libcx/include/libcx/uti/: common_ref.hh  compare.hh  container.hh  decay.hh  iterator.hh  members.hh  rvalue.hh  sfinae.hh  tuple.hh  typeseq.hh  utilities.hh
Personal/dev/opt/libcx/script/: ccbuild.sh
Personal/dev/opt/libcx/src/: main.cc
Personal/dev/opt/libcx/test/: .clangd  test_asrm.#  test_error.#  test_error_mk2.#  test_error_mk2.%  test_error_old.#  test_inline_array.##  test_io.#  test_memory.cc  test_multi_array.#  test_shared_pointer.#  test_soa_demo.#  test_static_string.#  test_string_literal.#  test_string_pack.#  test_string_reference.#  test_utilities.#  test_xor.#  test_zero_string.#
Personal/dev/opt/libcx/test/catch/: catch_amalgamated.cc  catch_amalgamated.hh  catch_main.cc
Personal/dev/script/: backup_repos.sh  backupscript.sh  ccbuild.sh  ccinit.sh  clang_.sh  faust_compile_cpp.sh  faust_compile_julia.sh  faust_compile_mojo.sh  faust_test_cpp.sh  faust_test_julia.sh  faust_test_mojo.sh  faust_test_mojo_1.sh  faust_test_mojo_2.sh  fix_treesitter.sh  formula_gen.py  gg.sh  ggg.sh  init_pixi.sh  javaproject.sh  matfunc.sh  piobuild.sh  pioinit.sh  rm_treesitter.sh  setup_config.sh  switch_theme.lua  tex_compile.sh  to_greyscale.py  unreal_clone.sh
Personal/dev/sketch/: .clangd
Personal/dev/tool/src/: easy_cloc.cpp  typing_only.cpp  (+1 more)
Personal/dev/workspace/: .clang-format
(+11 files in other folders)
